--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ body{
 .carousel .overlay .content h2{
     font-size: 48px;
 }
+@media screen and (max-width:700px){
+    .carousel .overlay .content h2{
+        font-size: 28px;
+    }
+}
 .carousel .overlay .content{
     font-size: 16px;
     font-weight: 400;
