--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body{
         font-size: 25px;
     }
     .register-login{
-        justify-content:center;
+        justify-content:center !important;
     }
 }
 .carousel .overlay .content{
